--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
 #  production_install:
 #    strategy:
 #      matrix:
-#        node: [ '10', '12', '14', '16' ]
+#        node: [ '14', '16', '18' ]
 #        os: [ 'ubuntu-latest', 'macos-latest', 'windows-latest' ]
 #    runs-on: ${{ matrix.os }}
 #    timeout-minutes: 15
