--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,8 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run link
-      - run: timeout 0.2s time ./bin/nomo-webon-kit --version
-      - run: timeout 0.2s time ./bin/nomo-webon-kit --help
+      - run: timeout 0.2s time ./bin/nomo-webon-cli --version
+      - run: timeout 0.2s time ./bin/nomo-webon-cli --help
       - run: npm run test
       - run: git diff --exit-code
       - name: Release
@@ -64,6 +64,6 @@ jobs:
 #        with:
 #          node-version: ${{ matrix.node }}
 #      - run: node --version
-#      - run: npm install --global nomo-webon-kit
-#      - run: nomo-webon-kit --help
-#      - run: nomo-webon-kit --version
+#      - run: npm install --global nomo-webon-cli
+#      - run: nomo-webon-cli --help
+#      - run: nomo-webon-cli --version
