--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "commander": "^6.1.0",
     "dotenv": "^16.3.1",
     "semver": "^7.5.4",
+    "tar": "^6.2.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
     "@types/jest": "^29.5.8",
     "@types/semver": "^7.5.0",
+    "@types/tar": "^6.1.9",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
