--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "dependencies": {
     "commander": "^6.1.0",
     "dotenv": "^16.3.1",
+    "inquirer": "^7.3.3",
     "semver": "^7.5.4",
     "tar": "^6.2.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
+    "@types/inquirer": "^7.3.3",
     "@types/jest": "^29.5.8",
     "@types/node": "^14.11.8",
     "@types/semver": "^7.5.0",
