--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clean": "rm -rf ./dist",
     "test": "jest --testTimeout=10000",
     "prepublishOnly": "git diff --exit-code",
-    "deploy": "nomo-webon-cli build out && nomo-webon-cli deploy out/nomo.tar.gz production"
+    "deploy": "nomo-webon-cli build test_assets && nomo-webon-cli deploy out/nomo.tar.gz production"
   },
   "dependencies": {
     "commander": "^6.1.0",
