add prepublish safety script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "link": "npm link",
     "clean": "rm -rf ./dist",
     "test": "jest --testTimeout=10000",
-    "prepublishOnly": "git diff --exit-code",
+    "prepublishOnly": "npm run build && git diff --exit-code",
     "deploy": "nomo-webon-cli build test_assets && nomo-webon-cli deploy out/nomo.tar.gz production"
   },
   "dependencies": {
