--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nomo-webon-cli",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "A CLI for building and deploying Nomo WebOns",
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "commander": "^6.1.0",
+    "ethers": "^6.11.1",
     "inquirer": "^7.3.3",
     "semver": "^7.5.4",
     "tar": "^6.2.0",
